Fix - table alignment; button tag on table-header; main tag

--- a/web/css/schedule.scss
+++ b/web/css/schedule.scss
@@ -9,4 +9,11 @@
         transition: .2s;
         transform: scale(1.3);
     }
+    .btn-blue {
+        color: #1266f1;
+    }
+}
+
+.aligner {
+    text-align: center;
 }
